--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Welcome to Equil CS</title>
+</head>
 
 <body>
-Equil CS, LLC
+  <h1>Equil Computing Solutions, LLC</h1>
+  <p>Welcome to Equil Computing Solutions</p>
 </body>
 
+<footer>
+  <p>&copy; 2014 
+  <br>
+  Equil Computing Solutions, LLC
+  <br>
+  All Rights Reserved
+  </p>
+</footer>
 </html>
